--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -3,3 +3,5 @@
   {% csrf_token %} {{form.as_p}}
   <input type="submit" value="Login" />
 </form>
+
+<p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
